# BASE

./: CLAUDE.txt  QUICKSTART.txt
claude_project_1/claude_sessions/1/template/src/template/src/: Main.hs  Template.hs
claude_project_2/claude_sessions/: notes_for_claude.txt
claude_project_2/claude_sessions/1/: session.txt
claude_project_2/claude_sessions/1/surprise/: cabal.project  claude_surprise.bat  surprise.bat  surprise.out
claude_project_2/claude_sessions/1/surprise/src/surprise/: surprise.cabal
claude_project_2/claude_sessions/1/surprise/src/surprise/src/: Main.hs  Surprise.hs
versions/version-1/claude_project_1/claude_sessions/: notes_for_claude.txt
versions/version-1/claude_project_1/claude_sessions/1/: session.txt
versions/version-1/claude_project_1/claude_sessions/1/template/: cabal.project  claude_template.bat  template.bat
versions/version-1/claude_project_1/claude_sessions/1/template/src/template/: template.cabal  template.out
versions/version-1/claude_project_2/claude_sessions/: notes_for_claude.txt
versions/version-1/claude_project_2/claude_sessions/1/: session.txt
versions/version-1/claude_project_2/claude_sessions/1/test/: cabal.project  claude_test.bat  test.bat  test.out
versions/version-1/claude_project_2/claude_sessions/1/test/src/test/: test.cabal
versions/version-1/claude_project_2/claude_sessions/1/test/src/test/src/: Main.hs  Test.hs
