cabal-version:      2.4
name:               surprise
version:            0.1.0.0

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Surprise
  build-depends: base

executable surprise
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: base, surprise
