cabal-version:      2.4
name:               template
version:            0.1.0.0

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Template
  build-depends: base

executable template
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: base, template
