cabal-version:      2.4
name:               test
version:            0.1.0.0

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Test
  build-depends: base

executable test
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: base, test
